@@ -1,3 +1,9 @@
+2008-02-11  Martin Mares <mj@ucw.cz>
+
+	* lib/names.c: Fix displaying of errors reported by zlib.
+	Previously, the buffer containing the error message had
+	been deallocated by gzclose() before the message was printed.
+
 2008-01-07  Martin Mares <mj@ucw.cz>
 
 	* update-pciids.sh: Added quiet mode (-q). Clean up uncompressed
